--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - '.:/app'
     tty: true  
     depends_on:
-      - db 
+      - mysql-db 
   mysql-db:
     image: 'mysql:8.0.25'
     command: --default-authentication-plugin=mysql_native_password
